# LicenseChain-CPP-SDK

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
examples/: advanced_features.cpp  basic_usage.cpp  webhook_integration.cpp
examples/jwks_only/: README.md  fetch_jwks.sh
include/: LicenseChain.hpp
include/licensechain/: exceptions.h  license_assertion.h  licensechain_client.h  models.h  services.h  utils.h  webhook_handler.h
src/: LicenseChain.cpp  main.cpp  utils.cpp
tests/: LicenseChainTest.cpp
